# LearnOpenGL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.neovim/: cmake.json
cmake/: 3rdparty.cmake
res/shader/get_started/: coordinate_system.fs  coordinate_system.vs  transformations.fs  transformations.vs
res/shader/lighting/: basic_gouraud_lighting.fs  basic_gouraud_lighting.vs  basic_lighting.fs  basic_lighting.vs
src/: main.cpp
src/common/: common_utils.cpp  common_utils.h  player_camera.cpp  player_camera.h  shader.cpp  shader.h
src/getting_started/: camera.cpp  coordinate_system.cpp  creating_window.cpp  hello_triangle.cpp  hello_triangle_ebo.cpp  hello_triangle_vao.cpp  shaders_uniform.cpp  textures.cpp  transformations.cpp
src/lighting/: basic_gouraud_lighting.cpp  basic_lighting.cpp
